bk_ida/gccida/g2/regmove_optimize
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1631:4: error: expected ';' after expression
rtx regno_note; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1631:5: error: use of undeclared identifier 'regno_note'; did you mean 'reg_note'?
rtx regno_note; // r9 
    ^~~~~~~~~~
    reg_note
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1528:9: note: 'reg_note' declared here
__int64 reg_note; // rsi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1637:4: error: expected ';' after expression
rtx v122; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1637:5: error: use of undeclared identifier 'v122'
rtx v122; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1638:4: error: expected ';' after expression
rtx v123; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1638:5: error: use of undeclared identifier 'v123'
rtx v123; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1640:4: error: expected ';' after expression
rtx v125; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1640:5: error: use of undeclared identifier 'v125'
rtx v125; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1641:4: error: expected ';' after expression
rtx real_insn; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1641:5: error: use of undeclared identifier 'real_insn'; did you mean 'next_insn'?
rtx real_insn; // r14 
    ^~~~~~~~~
    next_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/rtl.h:1347:12: note: 'next_insn' declared here
extern rtx next_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1642:4: error: expected ';' after expression
rtx v127; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1642:5: error: use of undeclared identifier 'v127'
rtx v127; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1645:4: error: expected ';' after expression
rtx v130; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1645:5: error: use of undeclared identifier 'v130'
rtx v130; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1655:4: error: expected ';' after expression
rtx v140; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1655:5: error: use of undeclared identifier 'v140'
rtx v140; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1658:4: error: expected ';' after expression
rtx v143; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1658:5: error: use of undeclared identifier 'v143'
rtx v143; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/regmove.c:1662:4: error: expected ';' after expression
rtx v147; // rbp 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regmove_optimize/src/obj/regmove.o] Error 1
